--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "list",
+  "name": "nextjs-lottery-fcc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2"
   },
   "devDependencies": {
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6"
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
